@@ -814,6 +814,7 @@ Daniel May
 Madison May
 Lucas Maystre
 Arnaud Mazin
+Matt McClure
 Rebecca McCreary
 Kirk McDonald
 Chris McDonough
@@ -1336,6 +1337,7 @@ Kevin Walzer
 Rodrigo Steinmuller Wanderley
 Ke Wang
 Greg Ward
+Tom Wardill
 Zachary Ware
 Jonas Wagner
 Barry Warsaw
